# smallprofiler

./: CMakeLists.txt  README.md  profiler.h
cmake/: smallprofilerConfig.cmake
include/: smallprofiler.h
